--- a/index.html
+++ b/index.html
@@ -16,43 +16,47 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
-    <title>Hello, world!</title>
+    <title>Reddit-Lite</title>
   </head>
   <body>
-    <h1>Reddit-Lite</h1>
-    <form action="/action_page.php">
-      <h3>Login</h3>
-      <div class="form-group">
-        <label for="email">Username:</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="User123"
-        />
-      </div>
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd" />
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
+    <header>
+      <nav class="navbar navbar-expand-sm">
+        <h1 class="page-name">reddit-lite</h1>
+      </nav>
+    </header>
+
+    <section class="container-fluid">
+      <section class="row justify-content-center">
+        <section class="col-12 col-sm-6 col-sm-3">
+          <form class="form-signin">
+            <h3 class="form-signin-heading text-center">Sign In</h3>
+            <br />
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                name="username"
+                placeholder="Username"
+                required
+                autofocus
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="password"
+                class="form-control"
+                name="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <br />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+              Sign In
+            </button>
+          </form>
+        </section>
+      </section>
+    </section>
   </body>
 </html>
