session management, account verification

--- a/index.html
+++ b/index.html
@@ -20,23 +20,36 @@ rap/3.3.6/css/bootstrap.min.css">
                   <label for="passForm">Password</label>
                   <input class="form-control" name="password" id ="passForm" type="password" required>
                </div>
-               <button type="submit" class="btn btn-default">Submit</button>
+               <button type="submit" class="btn btn-default">Login</button>
                <button type="reset" class="btn btn-default">Clear</button>
             </form>
             <br>
-            <a href="createAccount.html"><button class="btn btn-default">Create Account</button></a>
-
-
-
          </div>
-
-
-
       </div>
-
-
-
     </section>
+    <h2>Create Account</h2>
+    <section>
+      <div class="panel panel-default">
+         <div class = "panel-body">
+            <form acc-creation="form">
+               <div class="form-group">
+                  <label for="createUser">Username</label>
+                  <input class="form-control" name="createUser" id="createUser" autofocus required>
+                  <label for="createPass">Password</label>
+                  <input class="form-control" name="createPass" id ="createPass" type="password" required>
+                  <label for="createName">Name</label>
+                  <input class="form-control" name="createName" id ="createName">
+                  <label for="createEmail">Email</label>
+                  <input class="form-control" name="createEmail" id ="createEmail" type="email" required>
+               </div>
+               <button type="submit" class="btn btn-default">Create Account</button>
+               <button type="reset" class="btn btn-default">Clear</button>
+            </form>
+         </div>
+      </div>
+    </section>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"
  charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
