--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,11 @@
  <head>
  <meta charset="utf-8">
  <title>DashBoard</title>
+
+ <script
+ src="https://code.jquery.com/jquery-3.4.1.js"
+ integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+ crossorigin="anonymous"></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootst
 rap/3.3.6/css/bootstrap.min.css">
  </head>
