removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="container-fluid">
       <section class="row justify-content-center">
-        <section class="col-12 col-sm-6 col-sm-3">
+        <section class="col-sm-6">
           <form class="form-signin" login-input="form">
             <h3 class="form-signin-heading text-center">Sign In</h3>
             <br />
@@ -68,7 +68,7 @@
 
     <section class="container-fluid">
       <section class="row justify-content-center">
-        <section class="col-12 col-sm-6 col-sm-3">
+        <section class="col-sm-6">
           <div class="panel panel-default">
             <div class="panel-body">
               <form class="form-signin" login-input="form" acc-creation="form">
@@ -116,9 +116,9 @@
                   <br />
                 </div>
                 <!-- <button type="submit" class="btn btn-default">
-                  Create Account
-                </button>
-                <button type="reset" class="btn btn-default">Clear</button> -->
+                          Create Account
+                        </button>
+                        <button type="reset" class="btn btn-default">Clear</button> -->
                 <button type="submit" class="btn btn-lg btn-primary btn-block">
                   Create Account
                 </button>
