fixed async bug (hopefully)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -12,9 +10,10 @@
 
     <!-- JQuery -->
     <script
-    src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap CSS -->
     <link
@@ -67,37 +66,83 @@
       </section>
     </section>
 
-
-
-
-    <h2>Create Account</h2>
-    <section>
-      <div class="panel panel-default">
-         <div class = "panel-body">
-            <form acc-creation="form">
-               <div class="form-group">
-                  <label for="createUser">Username</label>
-                  <input class="form-control" name="createUser" id="createUser" autofocus required>
-                  <label for="createPass">Password</label>
-                  <input class="form-control" name="createPass" id ="createPass" type="password" required>
-                  <label for="createName">Name</label>
-                  <input class="form-control" name="createName" id ="createName">
-                  <label for="createEmail">Email</label>
-                  <input class="form-control" name="createEmail" id ="createEmail" type="email" required>
-               </div>
-               <button type="submit" class="btn btn-default">Create Account</button>
-               <button type="reset" class="btn btn-default">Clear</button>
-            </form>
-         </div>
-      </div>
+    <section class="container-fluid">
+      <section class="row justify-content-center">
+        <section class="col-12 col-sm-6 col-sm-3">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form class="form-signin" acc-creation="form">
+                  <h3 class="form-signin-heading text-center">
+                    Create Account
+                  </h3>
+                  <div class="form-group">
+                    <!-- <label for="createUser">Username</label> -->
+                    <input
+                      class="form-control"
+                      name="createUser"
+                      id="createUser"
+                      placeholder="Username"
+                      autofocus
+                      required
+                    />
+                    <br />
+                    <!-- <label for="createPass">Password</label> -->
+                    <input
+                      class="form-control"
+                      name="createPass"
+                      id="createPass"
+                      type="password"
+                      placeholder="Password"
+                      required
+                    />
+                    <br />
+                    <!-- <label for="createName">Name</label> -->
+                    <input
+                      class="form-control"
+                      name="createName"
+                      id="createName"
+                      placeholder="Name"
+                    />
+                    <br />
+                    <!-- <label for="createEmail">Email</label> -->
+                    <input
+                      class="form-control"
+                      name="createEmail"
+                      id="createEmail"
+                      type="email"
+                      placeholder="Email"
+                      required
+                    />
+                    <br />
+                  </div>
+                  <!-- <button type="submit" class="btn btn-default">
+                  Create Account
+                </button>
+                <button type="reset" class="btn btn-default">Clear</button> -->
+                  <button
+                    type="submit"
+                    class="btn btn-lg btn-primary btn-block"
+                  >
+                    Create Account
+                  </button>
+                  <button type="reset" class="btn btn-lg btn-primary btn-block">
+                    Clear
+                  </button>
+                </form>
+              </form>
+            </div>
+          </div>
+        </section>
+      </section>
     </section>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"
-    charset="utf-8"></script>
-       <script src="scripts/formhandler.js" charset="utf-8"></script>
-       <script src="scripts/datastore.js" charset="utf-8"></script>
-       <script src="scripts/handler.js" charset="utf-8"></script>
-       <script src="scripts/main.js" charset="utf-8"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"
+      charset="utf-8"
+    ></script>
+    <script src="scripts/formhandler.js" charset="utf-8"></script>
+    <script src="scripts/datastore.js" charset="utf-8"></script>
+    <script src="scripts/handler.js" charset="utf-8"></script>
+    <script src="scripts/main.js" charset="utf-8"></script>
   </body>
 </html>
